# lemoncrow

./: .env.production.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AGENT_README.md  BENCHMARKS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  copilot-instructions.md  docker-compose.yml  hatch_build.py  opencode.json  pyproject.toml  requirements-audit.txt  vector_cache.sqlite
benchmarks/: .gitignore  LICENSE  pyproject.toml
benchmarks/ab/: __init__.py  aggregate.py  pr_replay.py  runner.py  schedule.py
benchmarks/ab/tests/: test_aggregate.py  test_pr_replay.py  test_runner.py  test_schedule.py
benchmarks/codebench/: __init__.py  bench_index_latency.py  build_definition_gold.py  build_llm_gold.py  competitor.py  eval_embedder_mrr.py  eval_external_provider_mrr.py  incontainer.py  incontainer_entry.sh  local.py  multiswe.py  multiswe_run.py  offline_session_analyzer.py  prewarm_query_cache.py  provision_repos.py  run.py  run_embedder_sweep.py  semantic_pair_miner.py  swebench_data.py  swebench_grade.py  swebench_pro_data.py  swebench_pro_grade.py  synthetic_pair_miner.py  tasks.py
benchmarks/codebench/data/: bench_pairs_content_gold.json  bench_pairs_def_gold.json  bench_pairs_semantic_gold.json  bench_pairs_sessions_gold.json  bench_pairs_swebench_gold.json
benchmarks/codebench/results/: mrr_history.jsonl
benchmarks/embedding/: build_corpus.py  corpus.jsonl
benchmarks/flowlib/: __init__.py  dump.py  report.py  usage_parser.py
benchmarks/flowlib/tests/: test_report.py
benchmarks/harbor/: README.md  __init__.py  atelier_agent.py  build_bundle.sh  compare_current_atelier_to_baseline.py  compare_current_lemoncrow_to_baseline.py  compare_run.py  compare_run_history_to_baseline.py  lemoncrow_agent.py  metadata.yaml  normalize_baseline_cost.py  normalized_token_cost.py  rebuild_bundle.sh  run_remaining_reps.sh  scrape_baseline_trajectories.py  setup_preflight.sh
benchmarks/linear_vs_per_agent/: __init__.py  reporter.py  runner.py  scenarios.yaml
benchmarks/linear_vs_per_agent/tests/: test_reporter.py  test_runner.py
benchmarks/mcp_tools/: __init__.py  _env.py  bench_code.py  bench_code_3way.py  bench_compact.py  bench_context.py  bench_cost.py  bench_edit.py  bench_external_indexers.py  bench_external_matrix.py  bench_grep.py  bench_memory.py  bench_read.py  bench_real_cache.py  bench_rescue.py  bench_route.py  bench_savings.py  bench_search.py  bench_shell.py  bench_sql.py  bench_trace.py  bench_verify.py  bench_zoekt.py  export_public_mcp_csv.py  external_matrix_cases.py  harness.py  repo_facts.py  reporter.py
benchmarks/mcp_tools/cases/: __init__.py  code.py  compact.py  context.py  edit.py  grep.py  memory.py  read.py  route.py  savings.py  search.py  shell.py  sql.py  trace.py  zoekt.py
benchmarks/mcp_tools/results/: .gitignore
benchmarks/mini/: __init__.py  cases.yaml  report.py  runner.py  schema.py
benchmarks/retrieval/: ground_truth.jsonl
benchmarks/self_optimization/: README.md  __init__.py  eval.py  freeze_baseline.py  knobs.env
benchmarks/self_optimization/baseline/: swe30.json
benchmarks/self_optimization/tasks/: iterate.txt
benchmarks/swe/: atelier_proxy.py  make_preds.py  report.py  run_eval.sh  run_swe_bench.py  savings_replay.py  swebench_eval.py
benchmarks/swe/configs/: ollama_atelier.yaml  ollama_baseline.yaml
benchmarks/telegraphic/: __init__.py  extra_arms.py  prompts.json  report.py  retry_invalid.py  run.py
benchmarks/terminalbench/: _env.py  agent_adapter.py  harness.py  setup.sh.j2  tasks.yaml
benchmarks/vix_eval/: run.py
integrations/: AGENTS.atelier.md  AGENTS.lemoncrow.md  LICENSE  README.md  pyproject.toml
integrations/agents/: auto.md  bare.md  code.md  execute.md  explore.md  general.md  plan.md  research.md  review.md  solve.md
integrations/agents/shared/: agent-rule.md  change-discipline.md  coding-guidelines.md  core-discipline.md  destructive-guard.md  reply-register-lite.md  reply-register-mild.md  reply-register.md  response-economy.md  telegraphic-default.md  tool-discipline-read.md  tool-discipline.md
integrations/antigravity/: AGENTS.atelier.dev.md  AGENTS.atelier.md  README.md  install.sh  mcp.atelier.template.json  mcp.lemoncrow.template.json
integrations/antigravity/plugin/: mcp_config.json  plugin.json
integrations/antigravity/skills/: README.md
integrations/claude/: AGENTS.atelier.md  ATELIER_SKILL.md  LEMONCROW_SKILL.md  README.md  install.sh
integrations/claude/plugin/: .mcp.json  AGENT_README.md  mcp.json  settings.json
integrations/codex/: AGENTS.atelier.dev.md  AGENTS.atelier.md  AGENT_README.md  README.md  install.sh  mcp.json  verify.sh
integrations/codex/hooks/: compact.py  hooks.json  permission_request.py  pre_tool_use.py  savings_reporter.py  stop.py  subagent.py  update_notification.py  user_prompt.py
integrations/codex/plugin/: .mcp.json
integrations/codex/references/: v2-tools.md  workflow.md
integrations/codex/tasks/: preflight.md  review-repair.md
integrations/copilot/: AGENT_README.md  COPILOT_INSTRUCTIONS.atelier.dev.md  COPILOT_INSTRUCTIONS.atelier.md  COPILOT_INSTRUCTIONS.lemoncrow.md  README.md  install.sh  mcp.atelier.example.json  mcp.atelier.template.json  mcp.lemoncrow.template.json  tasks.json  verify.sh
integrations/copilot-cli/: install.sh
integrations/copilot-cli/hooks/: hooks.json  post_tool_use_failure.py  session_start.py  stop.py
integrations/copilot/agents/: atelier.auto.agent.md  atelier.bare.agent.md  atelier.code.agent.md  atelier.execute.agent.md  atelier.explore.agent.md  atelier.general.agent.md  atelier.plan.agent.md  (+13 more)
integrations/cursor/: AGENTS.atelier.md  mcp.atelier.template.json  mcp.lemoncrow.template.json
integrations/gemini/: GEMINI.atelier.dev.md  GEMINI.atelier.md  README.md  settings.json
integrations/hermes/: AGENTS.atelier.md
integrations/opencode/: README.md  install.sh  opencode.atelier.example.json  opencode.atelier.template.json  opencode.lemoncrow.template.json  verify.sh
integrations/skills/: AUTHORING.md
(+13619 files in other folders)
