[project]
name = "atelier"
version = "0.2.0"
description = "Agent Reasoning Runtime — reusable procedures, failure rescue, and rubric verification for coding and product agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Atelier" }]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "pydantic>=2.6",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "litellm>=1.83.14",
    "tiktoken>=0.9",
    "blake3>=0.4.1",
    "datasketch>=1.6",
    "tree-sitter>=0.23",
    "GitPython>=3.1.50",
    "pygit2==1.19.2",
    "prometheus-client>=0.21",
    "tenacity>=9.0",
    "pybreaker>=1.2",
    "river>=0.22",
    "networkx>=3.4",
    "mypy>=1.20.2",
    "types-pyyaml>=6.0.12.20260408",
    "ortools>=9.10",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "urllib3>=2.7.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "ollama>=0.6.2",
    "diff-match-patch>=2.1",
    "tree-sitter-language-pack>=1.8.1",
    "pexpect>=4.9.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
memory = ["letta-client>=1.7.12"]
memory-server = ["letta>=0.16.7"]
smart = ["ollama>=0.4.0"]
cloud = ["openai>=1.0"]
repo-map = ["tree-sitter>=0.23", "tree-sitter-languages>=1.10; python_version < '3.13'", "networkx>=3.4"]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
postgres = [
    "psycopg[binary]>=3.1",
]
vector = [
    "pgvector>=0.2",
    "numpy>=1.26",
]
parsers = [
    "tree-sitter-languages>=1.10; python_version < '3.13'",
]
rename = ["rope>=0.23"]
telemetry = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
atelier = "atelier.gateway.cli:main"
atelier-mcp = "atelier.gateway.adapters.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier", "src/benchmarks"]

[tool.hatch.build.targets.wheel.force-include]
"src/atelier/infra/seed_blocks" = "atelier/infra/seed_blocks"
"src/atelier/core/rubrics" = "atelier/core/rubrics"
"src/atelier/core/service/telemetry/frustration_lexicon.yaml" = "atelier/core/service/telemetry/frustration_lexicon.yaml"
"templates/reasonblocks" = "atelier/templates/reasonblocks"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE", "T20", "UP", "SIM", "RUF"]
ignore = ["E501"]

# M2/M3 BLE001/T201 burn-down worklist (Phase 22 prevention gates).
# These files carry PRE-EXISTING blind-except / print debt parked here so the rules
# stay globally enabled (new debt in clean files still fails lint). Re-derive with:
#   uv run ruff check src --select BLE001 --output-format=concise | grep -oE "^src/[^:]+" | sort -u
#   uv run ruff check src --select T20    --output-format=concise | grep -oE "^src/[^:]+" | sort -u
# Burn these down in Phases 23/24 by fixing the code and removing the entry.
[tool.ruff.lint.per-file-ignores]
# Benchmark dev-CLIs under src/benchmarks/** with both blind-except (BLE001) and
# print (T201) debt. The T201 ignore is INTENTIONAL here: src/benchmarks/** stdout is
# the report channel for these developer-facing CLIs (Phase 24, QBL-LOG-03). Their
# BLE001 entries remain pre-existing burn-down debt.
"src/benchmarks/swe/routing_replay_bench.py" = ["BLE001", "T201"]
"src/benchmarks/swe/savings_replay.py" = ["BLE001", "T201"]
"src/benchmarks/tool_bench/report.py" = ["BLE001", "T201"]
# Files with blind-except (BLE001) debt only (T201 converted to logging in Phase 24):
"src/atelier/gateway/adapters/mcp_server.py" = ["BLE001"]
"src/atelier/gateway/hosts/registry.py" = ["BLE001"]
"src/atelier/gateway/hosts/session_parsers/_common.py" = ["BLE001"]
"src/atelier/gateway/hosts/session_parsers/claude.py" = ["BLE001"]
"src/atelier/gateway/hosts/session_parsers/cline.py" = ["BLE001"]
"src/atelier/gateway/hosts/session_parsers/codex.py" = ["BLE001"]
"src/atelier/gateway/hosts/session_parsers/copilot.py" = ["BLE001"]
"src/atelier/gateway/hosts/session_parsers/gemini.py" = ["BLE001"]
"src/atelier/gateway/hosts/session_parsers/opencode.py" = ["BLE001"]
"src/atelier/__init__.py" = ["BLE001"]
"src/atelier/core/capabilities/autopilot/capability.py" = ["BLE001"]
"src/atelier/core/capabilities/autopilot/factory.py" = ["BLE001"]
"src/atelier/core/capabilities/budget_optimizer/optimizer.py" = ["BLE001"]
"src/atelier/core/capabilities/code_context/engine.py" = ["BLE001"]
"src/atelier/core/capabilities/code_context/intel_store.py" = ["BLE001"]
"src/atelier/core/capabilities/context_compression/capability.py" = ["BLE001"]
"src/atelier/core/capabilities/context_compression/deduplication.py" = ["BLE001"]
"src/atelier/core/capabilities/context_reuse/capability.py" = ["BLE001"]
"src/atelier/core/capabilities/lesson_promotion/capability.py" = ["BLE001"]
"src/atelier/core/capabilities/local_recall.py" = ["BLE001"]
"src/atelier/core/capabilities/loop_detection/capability.py" = ["BLE001"]
"src/atelier/core/capabilities/memory_arbitration/arbiter.py" = ["BLE001"]
"src/atelier/core/capabilities/model_routing/router.py" = ["BLE001"]
"src/atelier/core/capabilities/optimization_audit.py" = ["BLE001"]
"src/atelier/core/capabilities/plugin_runtime.py" = ["BLE001"]
"src/atelier/core/capabilities/pricing.py" = ["BLE001"]
"src/atelier/core/capabilities/registry/graph.py" = ["BLE001"]
"src/atelier/core/capabilities/reporting/weekly_report.py" = ["BLE001"]
"src/atelier/core/capabilities/savings_summary.py" = ["BLE001"]
"src/atelier/core/capabilities/semantic_file_memory/capability.py" = ["BLE001"]
"src/atelier/core/capabilities/semantic_file_memory/python_ast.py" = ["BLE001"]
"src/atelier/core/capabilities/semantic_file_memory/treesitter_ast.py" = ["BLE001"]
"src/atelier/core/capabilities/semantic_file_memory/typescript_ast.py" = ["BLE001"]
"src/atelier/core/capabilities/style_import/importer.py" = ["BLE001"]
"src/atelier/core/capabilities/sync/sync_engine.py" = ["BLE001"]
"src/atelier/core/capabilities/telemetry/context_budget.py" = ["BLE001"]
"src/atelier/core/capabilities/tool_supervision/bash_exec.py" = ["BLE001"]
"src/atelier/core/capabilities/tool_supervision/batch_edit.py" = ["BLE001"]
"src/atelier/core/capabilities/tool_supervision/capability.py" = ["BLE001"]
"src/atelier/core/capabilities/tool_supervision/native_search.py" = ["BLE001"]
"src/atelier/core/capabilities/tool_supervision/rich_edit.py" = ["BLE001"]
"src/atelier/core/capabilities/tool_supervision/search_read.py" = ["BLE001"]
"src/atelier/core/capabilities/tool_supervision/smart_search.py" = ["BLE001"]
"src/atelier/core/capabilities/verification/checks/lint.py" = ["BLE001"]
"src/atelier/core/capabilities/verification/checks/tests.py" = ["BLE001"]
"src/atelier/core/capabilities/verification/checks/typecheck.py" = ["BLE001"]
"src/atelier/core/domains/loader.py" = ["BLE001"]
"src/atelier/core/domains/manager.py" = ["BLE001"]
"src/atelier/core/foundation/identity.py" = ["BLE001"]
"src/atelier/core/foundation/rubric_gate.py" = ["BLE001"]
"src/atelier/core/foundation/store.py" = ["BLE001"]
"src/atelier/core/foundation/watchdog_profiles.py" = ["BLE001"]
"src/atelier/core/runtime/engine.py" = ["BLE001"]
"src/atelier/core/service/api.py" = ["BLE001"]
"src/atelier/core/service/ingest_session.py" = ["BLE001"]
"src/atelier/core/service/ingest_session_directory.py" = ["BLE001"]
"src/atelier/core/service/sync.py" = ["BLE001"]
"src/atelier/core/service/telemetry/__init__.py" = ["BLE001"]
"src/atelier/core/service/telemetry/config.py" = ["BLE001"]
"src/atelier/core/service/telemetry/emit.py" = ["BLE001"]
"src/atelier/core/service/telemetry/exporters/otel.py" = ["BLE001"]
"src/atelier/core/service/worker.py" = ["BLE001"]
"src/atelier/gateway/adapters/remote_client.py" = ["BLE001"]
"src/atelier/gateway/cli/app.py" = ["BLE001"]
"src/atelier/gateway/cli/commands/servicectl.py" = ["BLE001"]
"src/atelier/gateway/hosts/session_parsers/_session_parser.py" = ["BLE001"]
"src/atelier/gateway/integrations/external_analytics.py" = ["BLE001"]
"src/atelier/gateway/integrations/langfuse.py" = ["BLE001"]
"src/atelier/gateway/integrations/ledger_reconstructor.py" = ["BLE001"]
"src/atelier/gateway/integrations/openmemory.py" = ["BLE001"]
"src/atelier/infra/code_intel/git_history/adapter.py" = ["BLE001"]
"src/atelier/infra/code_intel/git_history/walker.py" = ["BLE001"]
"src/atelier/infra/code_intel/zoekt/adapter.py" = ["BLE001"]
"src/atelier/infra/embeddings/factory.py" = ["BLE001"]
"src/atelier/infra/memory_bridges/letta_adapter.py" = ["BLE001"]
"src/atelier/infra/memory_bridges/openmemory.py" = ["BLE001"]
"src/atelier/infra/runtime/checkpoint.py" = ["BLE001"]
"src/atelier/infra/runtime/context_compressor.py" = ["BLE001"]
"src/atelier/infra/runtime/insights.py" = ["BLE001"]
"src/atelier/infra/runtime/outcome_capture.py" = ["BLE001"]
"src/atelier/infra/runtime/realtime_context.py" = ["BLE001"]
"src/atelier/infra/runtime/session_state.py" = ["BLE001"]
"src/atelier/infra/runtime/servicectl_lifecycle.py" = ["BLE001"]
"src/atelier/infra/storage/postgres_store.py" = ["BLE001"]
"src/atelier/infra/storage/sqlite_store.py" = ["BLE001"]
"src/atelier/infra/tree_sitter/tags.py" = ["BLE001"]
"src/benchmarks/swe/compact_quality_bench.py" = ["BLE001"]
# Benchmark dev-CLIs under src/benchmarks/** with print (T201) debt only. These keep
# stdout intentionally as their report channel (Phase 24, QBL-LOG-03); converted non-CLI
# files (goose.py, kiro.py, infra/benchmarks/publisher.py) had their T201 ignores removed.
"src/benchmarks/code_intel/scale_decision_eval.py" = ["T201"]
"src/benchmarks/swe/savings_bench.py" = ["T201"]
"src/benchmarks/swe/swebench_eval.py" = ["T201"]
"src/benchmarks/tool_bench/__main__.py" = ["T201"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not slow'"
pythonpath = ["src", "."]
markers = [
    "slow: marks tests as slow",
    "ab: real A/B benchmark (atelier tool vs native); writes to ~/.atelier/savings_calibration.jsonl; run with `make bench-ab`",
    ]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "atelier.core.service.api",
    "atelier.gateway.adapters.http_api",
]
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = [
    "atelier.gateway.cli.app",
]
ignore_errors = true

[dependency-groups]
dev = [
    "black>=24.4",
    "httpx>=0.27",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5",
    "types-PyYAML",
]
