[tool.uv]
workspace = { members = ["benchmarks", "integrations"] }
# langfuse>=3 needs opentelemetry-api>=1.33 while letta (memory-server) pins
# ==1.30; they are mutually exclusive optional extras, so declare the conflict
# to keep `uv lock` resolvable. Install at most one of them.
conflicts = [
    [{ extra = "langfuse" }, { extra = "memory-server" }],
]

[tool.uv.sources]
# courlan imports babel only for Locale.parse(...).language (BCP47 prefix check).
# Override with a minimal functional stub to save ~30 MB from the production install.
# Pre-built wheel so uv generates a named constraint (babel @ file://...) instead of
# an unnamed path, which uv pip install --constraint rejects.
babel = { path = "vendor/babel-99.0.0-py3-none-any.whl" }

[project]
name = "atelier"
version = "0.2.1"
description = "Agent runtime for coding agents — reusable procedures, code intelligence, cost tracking, and model routing."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Atelier" }]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "pydantic>=2.6",
    "click>=8.1",
    "cryptography>=42",
    "pyyaml>=6.0",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "tiktoken>=0.9",
    "blake3>=0.4.1",
    "tree-sitter>=0.23",
    "GitPython>=3.1.50",
    "pygit2==1.19.2",
    "prometheus-client>=0.21",
    "tenacity>=9.0",
    "pybreaker>=1.2",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "urllib3>=2.7.0",
    "beautifulsoup4>=4.12",
    "markdownify>=1.2.2",
    "diff-match-patch>=2.1",
    "tree-sitter-language-pack>=1.8.1",
    "rapidfuzz>=3.14.5",
    "markdown-it-py>=3.0",
    "yarl==1.24.2",
    "zipp==4.1.0",
    "trafilatura>=2.0.0",
    "pdfplumber>=0.11",
    "pypdf>=5.0",
    "babel>=2.16.0",
    "regex>=2026.5.9",
    "aiohttp>=3.14.1",
    "sqliteai-vector>=1.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
memory = ["letta-client>=1.7.12"]
memory-server = ["letta>=0.16.7"]
smart = ["ollama>=0.4.0"]
cloud = ["openai>=1.0"]
postgres = [
    "psycopg[binary]>=3.1",
]
vector = [
    "pgvector>=0.2",
    "numpy>=1.26",
]
# Local code-embedding semantic search (BGE-Code-v1 via SentenceTransformers).
# sentence-transformers 5.x regresses bge-code-v1 loading (AutoProcessor error) --
# pin <5. Heavy (torch); opt-in only. accelerate + datasets back the per-repo
# finetuner behind `atelier code train --name=embedding`.
semantic = [
    "sentence-transformers>=3,<5",
    "torch>=2.2",
    "numpy>=1.26",
    "accelerate>=1.1",
    "datasets>=2.0",
]
parsers = [
    "tree-sitter-languages>=1.10; python_version < '3.13'",
]
rename = ["rope>=0.23"]
ortools = ["ortools>=9.10"]
litellm = ["litellm>=1.83.14"]
langfuse = ["langfuse>=3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "types-PyYAML",
    "pyinstaller>=6.10.0",
]

[project.scripts]
atelier = "atelier.gateway.cli:main"
atelierd = "atelier.core.service.daemon:main"

[build-system]
requires = ["hatchling", "setuptools", "mypy>=1.10"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier"]

[tool.hatch.build.targets.wheel.force-include]
"src/atelier/core/service/telemetry/frustration_lexicon.yaml" = "atelier/core/service/telemetry/frustration_lexicon.yaml"
"integrations" = "atelier/integrations"

[tool.hatch.build.targets.wheel.hooks.custom]
# hatch_build.py: compiles src/atelier/ with mypyc (skipped if ATELIER_SKIP_MYPYC=1)

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["benchmarks/mcp_tools/fixtures/downloaded", "benchmarks/codebench/results"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]

[tool.black]
line-length = 120
target-version = ["py313"]
force-exclude = 'benchmarks/(codebench/results|mcp_tools/fixtures/downloaded)/'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not slow'"
pythonpath = ["src", "."]
markers = [
    "slow: marks tests as slow",
    "ab: real A/B benchmark for MCP tool savings",
    ]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = false
ignore_missing_imports = true
warn_return_any = false
disallow_subclassing_any = false
explicit_package_bases = true
mypy_path = ["src", "benchmarks", "integrations"]

[[tool.mypy.overrides]]
module = [
    "atelier.core.service.api",
    "atelier.gateway.adapters.http_api",
]
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = [
    "atelier.gateway.cli.app",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "scripts.*",
    "benchmarks.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["type-arg", "var-annotated"]

[[tool.mypy.overrides]]
module = [
    "atelier.gateway.cli.commands.*",
    "gateway.cli.commands.*",
]
disable_error_code = ["no-untyped-call", "untyped-decorator"]

[tool.pyright]
# Exclude the virtual environment and build artifacts from analysis so that
exclude = [".venv", "**/.venv", "**/node_modules", "**/__pycache__"]

[dependency-groups]
dev = [
    "black>=24.4",
    "httpx>=0.27",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-forked>=1.6.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5",
    "types-PyYAML",
    "pyinstaller>=6.10.0",
    "vulture>=2.16",
    "xgboost>=3.3.0",
    "litellm>=1.88.1",
]
