[project]
name = "atelier-integrations"
version = "0.1.0"
description = "Atelier integration plugins and hooks"
requires-python = ">=3.12"
dependencies = [
    "atelier",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
atelier = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "antigravity",
    "claude",
    "codex",
    "copilot",
    "copilot-cli",
    "cursor",
    "hermes",
    "opencode",
    "shared",
    "skills"
]
