[project]
name = "lemoncrow-integrations"
version = "0.1.0"
description = "LemonCrow integration plugins and hooks"
requires-python = ">=3.12"
dependencies = [
    "lemoncrow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lemoncrow = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "antigravity",
    "claude",
    "codex",
    "copilot",
    "copilot-cli",
    "cursor",
    "hermes",
    "opencode",
    "shared",
    "skills"
]
